force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/CustomerReviewForm__c.object-meta.xml
<CustomObject>
    <label>Contract Review Form</label>
    <nameField>
        <displayFormat>CRF-{0000}</displayFormat>
        <label>Customer Review Form Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Review Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>