force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Any_Changes_in_the_Customer_Master__c.field-meta.xml
<CustomField>
    <fullName>Any_Changes_in_the_Customer_Master__c</fullName>
    <label>Any Changes in the Customer Master</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>