force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Any_implied_requirement__c.field-meta.xml
<CustomField>
    <fullName>Any_implied_requirement__c</fullName>
    <label>Any implied requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>