force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Any_special_instructions_remarks_to_note__c.field-meta.xml
<CustomField>
    <fullName>Any_special_instructions_remarks_to_note__c</fullName>
    <label>Any special instructions/remarks to note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>