force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Any_specific_Statutory_Legal_requirement__c.field-meta.xml
<CustomField>
    <fullName>Any_specific_Statutory_Legal_requirement__c</fullName>
    <label>Any specific Statutory/Legal requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>