force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Any_stated_requirement_for_this_specific__c.field-meta.xml
<CustomField>
    <fullName>Any_stated_requirement_for_this_specific__c</fullName>
    <label>Any stated requirement for this specific</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>