force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contract Review Forms</relationshipLabel>
    <relationshipName>Customer_Review_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>