force-app/force-app/force-app/main/default/objects/CustomerReviewForm__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Customer_Review_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>